#232 fix double scroll for union popup

--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -5416,12 +5416,14 @@ ul.ddp-list-detail li .ddp-wrap-detailinfo .ddp-data-history .ddp-data-success {
 /************************************************************************
 	page : 데이터 프리퍼레이션 유니온
 **********************************************************************/
-.ddp-wrap-union {position:relative; width:100%; height:100%;}
-.ddp-wrap-union .ddp-ui-title {padding:20px 0; font-size:13px; color:#b7b9c2; font-weight:bold;}
-.ddp-ui-union-output {position:absolute; top:0; left:0; bottom:0; width:258px; border-right:1px solid #e7e7ea;}
-.ddp-ui-union-output .ddp-data-total {display:block; padding-bottom:10px; color:#444; font-size:13px;}
+.ddp-wrap-union {position:relative; width:100%; height:100%; overflow:auto; background-color:#fafafa;}
+.ddp-wrap-union .ddp-ui-title {padding:20px 0 19px 0; font-size:13px; color:#b7b9c2; font-weight:bold;}
+.ddp-ui-union-output {position:absolute; top:0; left:0; bottom:0; width:258px; border-right:1px solid #e7e7ea; background-color:#fff;}
+.ddp-ui-union-output .ddp-data-total {display:block; padding-bottom:8px; color:#444; font-size:13px;}
 .ddp-ui-union-output .ddp-data-total .ddp-data-num {color:#666eb2;}
-.ddp-wrap-union-list {position:absolute; top:76px; left:0; right:0; bottom:0; padding-right:20px; overflow-y:auto;}
+.ddp-wrap-union-list {position:relative; float:left; width:100%; padding-right:12px; box-sizing:border-box;}
+
+.ddp-wrap-union-list:before {display:inline-block; position:absolute; top:0; left:0; right:0; bottom:0; background-color:#fff; content:'';}
 .ddp-wrap-union-list ul.ddp-list-union li {padding-bottom:10px;}
 .ddp-wrap-union-list ul.ddp-list-union li .ddp-box-column {position:relative; padding:0 25px 0 51px; border-radius:2px; border:1px solid #d0d1d8; cursor: pointer;}
 .ddp-wrap-union-list ul.ddp-list-union li .ddp-box-column:hover {border:1px solid #b7b9c2;}
@@ -5434,13 +5436,17 @@ ul.ddp-list-detail li .ddp-wrap-detailinfo .ddp-data-history .ddp-data-success {
 .ddp-wrap-union-list ul.ddp-list-union li .ddp-box-column em.ddp-icon-control-edit {display:none; position:absolute; top:50%; right:5px; margin-top:-10px;}
 .ddp-wrap-union-list ul.ddp-list-union li .ddp-box-column:hover em.ddp-icon-control-edit {display:block;}
 
-.ddp-ui-union-set {position:absolute; left:259px; top:0; right:0; bottom:39px; background-color:#fafafa;}
+.ddp-ui-union-set {position:absolute; left:259px; top:0; right:0; bottom:0; background-color:#fafafa;}
 .ddp-ui-union-set .ddp-ui-title {padding:20px 20px 20px 20px;}
-.ddp-ui-union-set .ddp-ui-title a.ddp-btn-line {float:right; position:relative; top:-7px; font-weight:normal; cursor:pointer;}
-.ddp-ui-union-set .ddp-ui-title a.ddp-btn-line .ddp-icon-link-plus {margin-right:5px;}
+.ddp-ui-popup-contents a.ddp-dataset {position:absolute; top:93px; right:50px; font-weight:normal; cursor:pointer;}
+.ddp-ui-popup-contents a.ddp-dataset .ddp-icon-link-plus {margin-right:5px;}
+.ddp-ui-popup-contents.ddp-union {padding-top:140px;}
+
+
+
 
 .ddp-ui-union-set .ddp-ui-title a.ddp-btn-line:hover .ddp-icon-link-plus {background-position:-20px -2px; }
-.ddp-wrap-union-set {position:absolute; top:53px; left:0; right:0; bottom:0; overflow:auto;}
+.ddp-wrap-union-set {position:absolute; top:53px; left:0; right:0; bottom:0;}
 .ddp-ui-union-table {display:inline-block;  white-space:nowrap;}
 .ddp-ui-union-table table.ddp-table-union:first-of-type tr th,
 .ddp-ui-union-table table.ddp-table-union:first-of-type tr td {padding-left:23px;}
